crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__list__missing_closing_bracket_2.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/list/missing_closing_bracket_2.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..141,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 131..141,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 131..141,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 132..133,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                BinOp(
                                    ExprBinOp {
                                        node_index: NodeIndex(None),
                                        range: 136..141,
                                        left: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 136..137,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 140..141,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            runtime_elts: None,
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
4 | [1,
5 |
6 | x + y
  |      ^ Syntax Error: unexpected EOF while parsing
